<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="@dimen/child_margin_padding"
    android:padding="@dimen/child_margin_padding"
    tools:context=".LoginActivity">
    <!--1.1 TextView for title
        1.2 height/width: wrap content
        1.3 textStyle: bold
        1.4 textColor: colorAccent
        1.5 textAppearance: Headline4
        1.6 marginBottom: 20dp-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_app"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_marginBottom="20dp"/>

    <!-- 2.1 ImageView for the Image
         2.2 Fix height/width: 150dp
          2.3 Image source: src
          Note: Copy image to the drawable folder before using it -->
    <ImageView
        android:layout_width="@dimen/image_h_w"
        android:layout_height="@dimen/image_h_w"
        android:src="@drawable/student"/>

    <!-- 3.1 EditText to take the user input: Username
         3.2 hint: To display hint before taking the user input
         3.3 Proper Id for thee given editText
         3.4 singleLine: true makes the input to the single line
         3.5 marginStart/ marginEnd using the reference size from the dimens-->

    <EditText
        android:id="@+id/input_username_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_uname"
        android:singleLine="true"
        android:layout_marginStart="@dimen/child_margin_padding"
        android:layout_marginEnd="@dimen/child_margin_padding" />

    <!--Similar as username-->
    <EditText
        android:id="@+id/input_password_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_pw"
        android:singleLine="true"
        android:inputType="textPassword"
        android:layout_marginStart="@dimen/child_margin_padding"
        android:layout_marginEnd="@dimen/child_margin_padding" />

    <!-- 4.1 Button for the user actions
        4.2 textColor changes the text color being shown in the button
        4.3 Text: displays the button name/label
        4.4 backgroundTint provides the background color to the button-->
    <Button
        android:id="@+id/login_main_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/child_margin_padding"
        android:layout_marginEnd="@dimen/child_margin_padding"
        android:textColor="@android:color/white"
        android:text="@string/btn_text_login"
        android:backgroundTint="@color/colorAccent"/>
    <TextView
        android:id="@+id/text_signUp_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/child_margin_padding"
        android:text="@string/label_signup"/>

</LinearLayout>